test/test_cases/invalid/syntaxErr/basic/beginNoend.ast
-- Test: beginNoend.wacc

-- Uploaded file: 
---------------------------------------------------------------
# begin missing closing end

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skip
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:0 -- missing 'end' at '<EOF>'
1 parser error(s) detected, no further compilation attempted.

